--- a/stylesheets/_theme_dark.scss
+++ b/stylesheets/_theme_dark.scss
@@ -5,9 +5,9 @@
     &.modal {
       .content {
         textarea {
-          background-color: $color-dark-85;
+          background-color: var(--color-darker-gray-color);
           border: 1px solid $color-dark-60;
-          color: $color-dark-05;
+          color: var(--color-lighter-gray-color);
         }
       }
     }
@@ -15,8 +15,8 @@
     .result {
       .open {
         border: solid 1px $color-dark-60;
-        background-color: $color-dark-85;
-        color: $color-dark-05;
+        background-color: var(--color-darker-gray-color);
+        color: var(--color-lighter-gray-color);
 
         &:before {
           @include header-icon-white('../images/open_link.svg');
@@ -24,17 +24,17 @@
       }
 
       .link {
-        color: $color-dark-05;
+        color: var(--color-lighter-gray-color);
         border: solid 1px $color-dark-60;
         border-right: none;
-        background-color: $color-dark-85;
+        background-color: var(--color-darker-gray-color);
       }
     }
   }
 
   // _global
   .title-bar {
-    color: $color-dark-05;
+    color: var(--color-lighter-gray-color);
   }
 
   button.grey {
@@ -64,7 +64,7 @@
 
   input.search {
     border: 1px solid $color-light-60;
-    color: $color-dark-05;
+    color: var(--color-lighter-gray-color);
     background-color: $color-gray-95;
 
     &:focus {
@@ -148,7 +148,7 @@
   }
 
   .module-message__broken-image {
-    color: $color-dark-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-message__broken-image--incoming {
@@ -160,24 +160,24 @@
   }
 
   .module-message__video-overlay__play-icon {
-    @include color-svg('../images/play.svg', $color-loki-green);
+    @include color-svg('../images/play.svg', var(--color-session-green-color));
   }
 
   .module-message__broken-video-screenshot {
-    color: $color-dark-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-message__link-preview__content {
     background-color: $color-gray-95;
-    border: 1px solid $color-gray-60;
+    border: 1px solid var(--color-gray-color);
   }
 
   .module-message__link-preview__title {
-    color: $color-gray-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-message__link-preview__location {
-    color: $color-gray-25;
+    color: var(--color-light-gray-color);
   }
 
   // Module: Contact Detail
@@ -188,7 +188,7 @@
   }
 
   .module-contact-detail__additional-contact {
-    border-top: 1px solid $color-dark-70;
+    border-top: 1px solid var(--color-dark-gray-color);
   }
 
   .module-contact-detail__additional-contact__type {
@@ -207,7 +207,7 @@
     background-color: var(--color-destructive);
     color: var(--color-white-color);
     box-shadow: 0 0 10px -3px rgba(97, 97, 97, 0.7);
-    border: solid 1px $color-light-35;
+    border: solid 1px var(--color-light-gray-color);
   }
 
   .module-message-detail__contact__error {
@@ -217,17 +217,17 @@
   // Module: Media Gallery
 
   .module-media-gallery__tab {
-    background-color: $color-dark-85;
+    background-color: var(--color-darker-gray-color);
   }
 
   .module-media-gallery__tab--active {
-    border-bottom: 2px solid $color-loki-green;
+    border-bottom: 2px solid var(--color-session-green-color);
   }
 
   // Module: Document List Item
 
   .module-document-list-item--with-separator {
-    border-bottom: 1px solid $color-dark-70;
+    border-bottom: 1px solid var(--color-dark-gray-color);
   }
 
   .module-document-list-item__icon {
@@ -237,7 +237,7 @@
   // Module: Media Grid Item
 
   .module-media-grid-item {
-    background-color: $color-dark-85;
+    background-color: var(--color-darker-gray-color);
   }
 
   .module-media-grid-item__icon-image {
@@ -260,29 +260,29 @@
   // Module: Conversation List Item
 
   .module-conversation-list-item--is-selected {
-    background-color: $color-dark-70;
+    background-color: var(--color-dark-gray-color);
   }
 
   .module-conversation-list-item__unread-count {
     color: var(--color-white-color);
-    background-color: $color-loki-green;
-    box-shadow: 0px 0px 0px 1px $color-dark-85;
+    background-color: var(--color-session-green-color);
+    box-shadow: 0px 0px 0px 1px var(--color-darker-gray-color);
   }
 
   .module-conversation-list-item__header__name {
-    color: $color-gray-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-conversation-list-item__header__date--has-unread {
-    color: $color-gray-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-conversation-list-item__message__text {
-    color: $color-gray-25;
+    color: var(--color-light-gray-color);
   }
 
   .module-conversation-list-item__message__text--has-unread {
-    color: $color-gray-05;
+    color: var(--color-lighter-gray-color);
   }
 
   // Module: Main Header
@@ -291,10 +291,10 @@
     background-color: $color-gray-95;
     border-radius: 14px;
     border: solid 1px $color-gray-75;
-    color: $color-gray-05;
+    color: var(--color-lighter-gray-color);
 
     &::placeholder {
-      color: $color-gray-45;
+      color: var(--color-light-gray-color);
     }
 
     &:focus {
@@ -330,19 +330,19 @@
   }
 
   .module-attachments__close-button {
-    @include color-svg('../images/x-16.svg', $color-gray-45);
+    @include color-svg('../images/x-16.svg', var(--color-light-gray-color));
   }
 
   // Module: Staged Generic Attachment
 
   .module-staged-generic-attachment {
-    box-shadow: inset 0px 0px 0px 1px $color-gray-45;
+    box-shadow: inset 0px 0px 0px 1px var(--color-light-gray-color);
     background-color: $color-gray-75;
-    color: $color-dark-05;
+    color: var(--color-lighter-gray-color);
   }
 
   .module-staged-generic-attachment__close-button {
-    @include color-svg('../images/x.svg', $color-gray-45);
+    @include color-svg('../images/x.svg', var(--color-light-gray-color));
   }
 
   .module-staged-generic-attachment__icon {
@@ -356,7 +356,7 @@
   // Module: Staged Placeholder Attachment
 
   .module-staged-placeholder-attachment {
-    border: 1px solid $color-gray-60;
+    border: 1px solid var(--color-gray-color);
 
     &:hover {
       background: $color-gray-75;
@@ -364,24 +364,24 @@
   }
 
   .module-staged-placeholder-attachment__plus-icon {
-    @include color-svg('../images/plus-36.svg', $color-gray-60);
+    @include color-svg('../images/plus-36.svg', var(--color-gray-color));
   }
 
   // Module: Staged Link Preview
 
   .module-staged-link-preview__close-button {
-    @include color-svg('../images/x-16.svg', $color-gray-25);
+    @include color-svg('../images/x-16.svg', var(--color-light-gray-color));
   }
 
   // Module: Message Search Result
 
   .module-message-search-result {
     &:hover {
-      background-color: $color-dark-70;
+      background-color: var(--color-dark-gray-color);
     }
   }
 
   .module-message__link-preview__icon-container__circle-background {
-    background-color: $color-gray-25;
+    background-color: var(--color-light-gray-color);
   }
 }
