--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -22,7 +22,7 @@
       justify-content: center;
       align-items: center;
 
-      background-color: $session-color-black;
+      background-color: var(--color-black-color);
 
       width: 100%;
       height: 100%;
