--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -37,7 +37,7 @@
 
       .session-label {
         &.primary {
-          background-color: rgba($session-color-primary, 0.3);
+          background-color: rgba(var(--color-dark-gray-color), 0.3);
         }
         padding: var(--margins-xs) var(--margins-sm);
         text-align: center;
@@ -56,7 +56,7 @@
       min-width: 420px;
       padding: 3 * $session-margin-lg 2 * $session-margin-lg;
       box-sizing: border-box;
-      background-color: $session-shade-4;
+      background-color: var(--color-darker-gray-color);
       border: 1px solid $session-shade-8;
       border-radius: 2px;
 
