--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -57,7 +57,7 @@
       padding: 3 * $session-margin-lg 2 * $session-margin-lg;
       box-sizing: border-box;
       background-color: var(--color-darkest-gray-color);
-      border: 1px solid $session-shade-8;
+      border: 1px solid var(--color-darker-gray-color);
       border-radius: 2px;
 
       .warning-info-area,
