feat: move attachments outside of the message box

--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -216,8 +216,6 @@ $session-modal-size-sm: 220px;
 $session-modal-size-md: 400px;
 $session-modal-size-lg: 650px;
 
-$session_message-container-border-radius: 13px;
-
 // Spacing
 $session-margin-xs: 5px;
 $session-margin-sm: 10px;
@@ -241,3 +239,6 @@ $session-transition-duration: 0.25s;
 // //////////////////////////////////////////////
 
 $composition-container-height: 60px;
+
+$padding-message-content: 7px 13px; // FIXME to move to SessionTheme
+$border-radius-message-box: 16px; // FIXME to move to SessionTheme
