--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -145,17 +145,13 @@
 
 .module-message__link-preview {
   cursor: pointer;
-  border-top-left-radius: $session_message-container-border-radius;
-  border-top-right-radius: $session_message-container-border-radius;
 }
 
 .module-message__link-preview__content {
   padding: 8px;
-  background-color: $color-white;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  border: 1px solid $color-black-015;
 }
 
 .module-message__link-preview__image_container {
@@ -208,7 +204,6 @@
 }
 
 .module-message__link-preview__title {
-  color: $color-gray-90;
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 0.15px;
@@ -222,7 +217,6 @@
 
 .module-message__link-preview__location {
   margin-top: 4px;
-  color: $color-gray-60;
   font-size: 12px;
   height: 16px;
   letter-spacing: 0.4px;
@@ -787,7 +781,7 @@
 }
 
 .module-image--soft-corners {
-  border-radius: 4px;
+  border-radius: $border-radius-message-box;
 }
 
 .module-image__border-overlay {
@@ -817,21 +811,6 @@
   &-cover {
     object-fit: cover;
   }
-}
-
-.module-image__bottom-overlay {
-  height: 48px;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0) 9%,
-    rgba(0, 0, 0, 0.6)
-  );
-  position: absolute;
-  bottom: 0;
-  z-index: 1;
-  left: 0;
-  right: 0;
 }
 
 .module-image__play-overlay__circle {
@@ -883,29 +862,6 @@
   height: 16px;
   z-index: 2;
   background-image: url('../images/x-shadow-16.svg');
-}
-
-// Module: Image Grid
-
-.module-image-grid {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-
-  margin: -1px;
-}
-
-.module-image-grid__column {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.module-image-grid__row {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  flex-grow: 1;
 }
 
 // Module: Typing Animation
