--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -6,6 +6,22 @@
   background: var(--color-cell-background);
 }
 
+.module-message__container {
+  .module-message__text {
+    font-size: 14px;
+    line-height: 18px;
+    text-align: start;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    white-space: pre-wrap;
+
+    a {
+      text-decoration: underline;
+    }
+  }
+}
+
 .module-message {
   position: relative;
   display: inline-flex;
@@ -26,22 +42,18 @@
     word-break: break-word;
     white-space: pre-wrap;
 
+    padding: $padding-message-content;
+    border-radius: $border-radius-message-box;
+
     a {
       text-decoration: underline;
     }
   }
 
   &__container--incoming {
-    &--opaque {
-      background: var(--color-received-message-background);
-    }
-
-    &--transparent {
-      background: none;
-    }
+    color: var(--color-received-message-text);
 
     .module-message__text {
-      color: var(--color-received-message-text);
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -52,26 +64,17 @@
 
       a {
         text-decoration: underline;
-        color: var(--color-received-message-text);
+        color: inherit;
       }
     }
   }
+  color: var(--color-sent-message-text);
 
   &__container--outgoing {
-    &--opaque {
-      background: var(--color-sent-message-background);
-    }
-
-    &--transparent {
-      background: none;
-    }
-
     .module-message__text {
-      color: var(--color-sent-message-text);
-
       a {
         text-decoration: underline;
-        color: var(--color-sent-message-text);
+        color: inherit;
       }
     }
   }
