--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -62,6 +62,17 @@
   flex-direction: row;
   align-items: center;
   padding: 10px;
+  border-radius: var(--border-radius-message-box);
+
+  .module-message__container--outgoing & {
+    color: var(--color-sent-message-text);
+    background: var(--color-sent-message-background);
+  }
+
+  .module-message__container--incoming & {
+    color: var(--color-received-message-text);
+    background: var(--color-received-message-background);
+  }
 }
 
 .module-message__generic-attachment__icon-container {
@@ -88,7 +99,7 @@
 }
 
 .module-message__generic-attachment__icon__extension {
-  font-size: 10px;
+  font-size: 9px;
   line-height: 13px;
   letter-spacing: 0.1px;
   text-transform: uppercase;
@@ -115,7 +126,6 @@
 }
 
 .module-message__generic-attachment__file-name {
-  color: $color-gray-90;
   font-size: 14px;
   line-height: 18px;
   font-weight: 300;
@@ -125,14 +135,6 @@
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.module-message__generic-attachment__file-size,
-.module-message__generic-attachment__file-name--outgoing,
-.module-message__generic-attachment__file-size--incoming,
-.module-message__generic-attachment__file-size--outgoing,
-.module-message__generic-attachment__file-name--incoming {
-  color: var(--color-text);
 }
 
 .module-message__generic-attachment__file-size {
@@ -148,7 +150,7 @@
 }
 
 .module-message__link-preview__content {
-  padding: 8px;
+  padding: 0 0 5px 0;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -781,20 +783,7 @@
 }
 
 .module-image--soft-corners {
-  border-radius: $border-radius-message-box;
-}
-
-.module-image__border-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 1;
-  left: 0;
-  right: 0;
-}
-
-.module-image__border-overlay--dark {
-  background-color: $color-black-02;
+  border-radius: var(--border-radius-message-box);
 }
 
 .module-image__loading-placeholder {
@@ -858,8 +847,8 @@
   position: absolute;
   top: 5px;
   right: 5px;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   z-index: 2;
   background-image: url('../images/x-shadow-16.svg');
 }
