--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -27,7 +27,11 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  max-width: 65%;
+  max-width: 95%;
+
+  @media (min-width: 1200px) {
+    max-width: 65%;
+  }
 
   &__text-error {
     font-style: italic;
@@ -42,8 +46,8 @@
     word-break: break-word;
     white-space: pre-wrap;
 
-    padding: $padding-message-content;
-    border-radius: $border-radius-message-box;
+    padding: var(--padding-message-content);
+    border-radius: var(--border-radius-message-box);
 
     a {
       text-decoration: underline;
