--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -919,7 +919,7 @@ input {
     }
 
     &-disabled {
-      border: 1px solid $session-color-dark-grey !important;
+      border: 1px solid var(--color-darker-gray-color) !important;
     }
   }
 }
