--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -2,7 +2,7 @@
   &-fullscreen {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--color-white-color);
   }
   &-content {
     .session-button.brand-outline.brand.green:hover {
@@ -197,7 +197,7 @@
     justify-content: center;
     padding: 20px;
     border-radius: 13px;
-    border: 1px solid subtle(#353535);
+    border: 1px solid subtle(var(--color-darker-gray-color));
     margin-bottom: 20px;
 
     textarea {
