refactor: finished converting sass colors in _session_slider.scss
consolidated transparent and gray colors, success color should be dropped to text color in future

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -68,7 +68,7 @@ button {
 }
 button.grey {
   border-radius: $border-radius;
-  border: solid 1px #ccc;
+  border: solid 1px var(--color-light-gray-color);
   cursor: pointer;
   margin: 1em auto;
   padding: 1em;
