--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -85,7 +85,7 @@
 
       #password-prompt-input {
         width: 100%;
-        color: #fff;
+        color: var(--color-white-color);
         background-color: #2e2e2e;
         margin-top: 2 * $session-margin-lg;
         padding: var(--margins-xs) var(--margins-lg);
