--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -819,8 +819,9 @@
   height: 48px;
   background-image: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0) 9%,
+    var(--color-transparent-color),
+    /* TODO does this work */
+    var(--color-transparent-color) 9%,
     rgba(0, 0, 0, 0.6)
   );
   position: absolute;
