--- a/stylesheets/_theme_dark.scss
+++ b/stylesheets/_theme_dark.scss
@@ -38,7 +38,7 @@
   }
 
   button.grey {
-    border: solid 1px #ccc;
+    border: solid 1px var(--color-light-gray-color);
     color: var(--color-gray-color);
     background: var(--color-lightest-gray-color);
     box-shadow: 0 0 10px -5px rgba(var(--color-gray-color), 0.5);
@@ -129,8 +129,9 @@
   .module-message__img-overlay {
     background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0) 9%,
+      var(--color-transparent-color),
+      /* TODO does this work? */
+      var(--color-transparent-color) 9%,
       rgba(0, 0, 0, 0.02) 17%,
       rgba(0, 0, 0, 0.05) 24%,
       rgba(0, 0, 0, 0.08) 31%,
