refactor: finished converting sass colors in _session_theme.scss

--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -118,7 +118,7 @@
 
 h1 {
   @include session-h-title;
-  color: $session-shade-16;
+  color: var(--color-light-gray-color);
   font-size: 25px;
   margin: 0;
 
