--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -37,7 +37,7 @@
 
       .session-label {
         &.primary {
-          background-color: rgba(var(--color-dark-gray-color), 0.3);
+          background-color: rgba(var(--color-dark-gray-color-rgb), 0.3);
         }
         padding: var(--margins-xs) var(--margins-sm);
         text-align: center;
