--- a/stylesheets/_theme_dark.scss
+++ b/stylesheets/_theme_dark.scss
@@ -41,10 +41,10 @@
     border: solid 1px var(--color-light-gray-color);
     color: var(--color-gray-color);
     background: var(--color-lightest-gray-color);
-    box-shadow: 0 0 10px -5px rgba(var(--color-gray-color), 0.5);
+    box-shadow: 0 0 10px -5px rgba(var(--color-gray-color-rgb), 0.5);
 
     &:hover {
-      box-shadow: 0 0 10px -3px rgba(var(--color-gray-color), 0.7);
+      box-shadow: 0 0 10px -3px rgba(var(--color-gray-color-rgb), 0.7);
     }
   }
 
